test/src/e2e_vm_tests/test_programs/should_fail/import_error_ambiguity/src/main.sw
script;

mod submodule;

use submodule::Test;

fn main() -> u64 {
    0
}
